syntax = "proto3";

package product;

option go_package = "./product";

// 产品创建
message CreateRequest {
  string Name = 1;
  string Desc = 2;
  int64 Stock = 3;
  int64 Amount = 4;
  int64 Status = 5;
}
message CreateResponse { int64 id = 1; }
// 产品创建

// 产品修改
message UpdateRequest {
  int64 id = 1;
  optional string Name = 2;
  optional string Desc = 3;
  optional int64 Stock = 4;
  optional int64 Amount = 5;
  optional int64 Status = 6;
}
message UpdateResponse {}
// 产品修改

// 产品删除
message RemoveRequest { int64 id = 1; }
message RemoveResponse {}
// 产品删除

// 产品详情
message DetailRequest { int64 id = 1; }
message DetailResponse {
  int64 id = 1;
  string Name = 2;
  string Desc = 3;
  int64 Stock = 4;
  int64 Amount = 5;
  int64 Status = 6;
}
// 产品详情

// 预扣库存
message PreReduceStockRequest {
  int64 productId = 1;
  int64 quantity = 2;
}
message PreReduceStockResponse {
  string reservationId = 1; // 预扣ID
}
// 预扣库存

service Product {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Detail(DetailRequest) returns (DetailResponse);
  rpc PreReduceStock(PreReduceStockRequest) returns (PreReduceStockResponse);
}